--- a/readme
+++ b/readme
@@ -1,3 +1,21 @@
+kubectl get svc contour-envoy --namespace default -w
+kubectl get --namespace default svc -w nginx-ingress-controller
+
+helm install kong ./
+result in timed out...
+W0423 22:37:02.673429   65690 warnings.go:70] apiextensions.k8s.io/v1beta1 CustomResourceDefinition is deprecated in v1.16+, unavailable in v1.22+; use apiextensions.k8s.io/v1 CustomResourceDefinition
+W0423 22:37:02.694667   65690 warnings.go:70] apiextensions.k8s.io/v1beta1 CustomResourceDefinition is deprecated in v1.16+, unavailable in v1.22+; use apiextensions.k8s.io/v1 CustomResourceDefinition
+W0423 22:37:02.695245   65690 warnings.go:70] apiextensions.k8s.io/v1beta1 CustomResourceDefinition is deprecated in v1.16+, unavailable in v1.22+; use apiextensions.k8s.io/v1 CustomResourceDefinition
+W0423 22:37:02.697605   65690 warnings.go:70] apiextensions.k8s.io/v1beta1 CustomResourceDefinition is deprecated in v1.16+, unavailable in v1.22+; use apiextensions.k8s.io/v1 CustomResourceDefinition
+W0423 22:37:02.697770   65690 warnings.go:70] apiextensions.k8s.io/v1beta1 CustomResourceDefinition is deprecated in v1.16+, unavailable in v1.22+; use apiextensions.k8s.io/v1 CustomResourceDefinition
+Error: failed post-install: timed out waiting for the condition
+
+deploy.sh
+
 ➜  charts git:(dev) ✗ kubectl get svc contour-envoy --namespace default -w
 NAME            TYPE           CLUSTER-IP       EXTERNAL-IP   PORT(S)                      AGE
 contour-envoy   LoadBalancer   10.106.206.176   <pending>     80:32763/TCP,443:30003/TCP   53s
+
+➜  charts git:(dev) ✗ kubectl get --namespace default svc -w nginx-ingress-controller
+NAME                       TYPE           CLUSTER-IP      EXTERNAL-IP   PORT(S)                      AGE
+nginx-ingress-controller   LoadBalancer   10.108.220.65   <pending>     80:32580/TCP,443:30958/TCP   9m12s
